tools/hybrid-quickstart/apigee-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Namespace","metadata":{"annotations":{},"labels":{"istio-injection":"disabled"},"name":"apigee"}}
  creationTimestamp: "2021-05-28T21:16:53Z"
  labels:
    istio-injection: disabled
  managedFields:
  - apiVersion: v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:labels:
          .: {}
          f:istio-injection: {}
      f:status:
        f:phase: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2021-05-28T21:16:53Z"
  name: apigee
  resourceVersion: "8066"
  selfLink: /api/v1/namespaces/apigee
  uid: 41d1e529-1417-4530-8318-4e8c6ea94b52
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
